test/sema/invalid-argument-type.delta.output
invalid-argument-type.delta:8:17: error: invalid argument #1 type 'bool' to 'foo', expected 'int'
    var z = foo(f);
                ^
invalid-argument-type.delta:3:5: warning: unused declaration 'foo'
int foo(int a) { return a; }
    ^
